@@ -1,5 +1,7 @@
 package com.enershare.config;
 
+import com.enershare.exception.ApplicationException;
+import com.enershare.model.user.User;
 import com.enershare.repository.user.UserRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
@@ -7,8 +9,13 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.AuthenticationProvider;
+import org.springframework.security.authentication.BadCredentialsException;
+import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.AuthenticationException;
+import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
@@ -17,6 +24,8 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
+import java.util.Arrays;
+import java.util.Collection;
 import java.util.List;
 
 import static org.springframework.http.HttpHeaders.*;
@@ -26,21 +35,47 @@ import static org.springframework.http.HttpHeaders.*;
 public class ApplicationConfig {
 
     private final UserRepository userRepository;
+
     @Value("${cors.origin.url}")
     private String corsOriginUrl;
 
+
+
     @Bean
     public UserDetailsService userDetailsService() {
-        return username -> userRepository.findByUsername(username)
-                .orElseThrow(() -> new UsernameNotFoundException("User not found"));
+        return userId  -> userRepository.findById(userId)
+                .orElseThrow(() -> new ApplicationException("1001","User Not Found By Id"));
+
     }
 
     @Bean
     public AuthenticationProvider authenticationProvider() {
-        DaoAuthenticationProvider authenticationProvider = new DaoAuthenticationProvider();
-        authenticationProvider.setUserDetailsService(userDetailsService());
-        authenticationProvider.setPasswordEncoder(passwordEncoder());
-        return authenticationProvider;
+        return new AuthenticationProvider() {
+            @Override
+            public Authentication authenticate(Authentication authentication) throws AuthenticationException {
+
+                String name = authentication.getName();
+                String cred = authentication.getCredentials().toString();
+
+                User user = userRepository.findByUsernameOrPhone(name)
+                        .orElseThrow(() -> new ApplicationException("1000","User Not Found By Phone"));
+
+                if (user.getLogincode() != null && user.getLogincode().equals(cred)) {
+                    return new UsernamePasswordAuthenticationToken(user, null, user.getAuthorities());
+                }
+
+                if (user.getPassword() != null && passwordEncoder().matches(cred, user.getPassword())) {
+                    return new UsernamePasswordAuthenticationToken(user, null, user.getAuthorities());
+                }
+
+                throw new BadCredentialsException("Invalid Credentials");
+            }
+
+            @Override
+            public boolean supports(Class<?> authentication) {
+                return UsernamePasswordAuthenticationToken.class.isAssignableFrom(authentication);
+            }
+        };
     }
 
     @Bean
@@ -53,12 +88,14 @@ public class ApplicationConfig {
         return new BCryptPasswordEncoder();
     }
 
-
     @Bean
     public CorsFilter corsFilter() {
         CorsConfiguration config = new CorsConfiguration();
         config.setAllowCredentials(true);
-        config.setAllowedOrigins(List.of(corsOriginUrl));
+        // config.setAllowedOriginPatterns(Arrays.asList("*"));
+        // config.setAllowedOrigins(List.of(corsOriginUrl));
+        // config.setAllowedOrigins("*");
+        config.setAllowedOriginPatterns(Arrays.asList(corsOriginUrl));
         config.setAllowedHeaders(List.of(ORIGIN, CONTENT_TYPE, ACCEPT, AUTHORIZATION));
         config.setAllowedMethods(List.of("GET", "POST", "DELETE", "PUT", "PATCH"));
 
